[gd_scene load_steps=3 format=3 uid="uid://caox4g6ghva7q"]

[ext_resource type="Script" uid="uid://ct1n7p3inv7m3" path="res://Scripts/MainMenu.gd" id="1_rrxvj"]
[ext_resource type="PackedScene" uid="uid://bmvqdlwb3hmuk" path="res://Scene/mainmenubackground.tscn" id="2_c6fb4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrxvj")

[node name="Mainmenubackground" parent="." instance=ExtResource("2_c6fb4")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 47.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Ragnamoria"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -50.5
offset_right = 39.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/ContinueButton" to="." method="_on_Continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
